--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Restcountries App</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
   <h1>Información sobre Países</h1>
   <div id="countries-list"></div>
 
   <script src="./js/script.js"></script>
 </body>
+
 </html>
